# virtualenvs

./: README.md
img/: python-environment.pptx  ~$python-environment.pptx
virtualenvs/pytorch_p38/: pyproject.toml
virtualenvs/tensorflow_p38/: pyproject.toml
