[tool.poetry]
name = "pytorch_p38"
version = "0.1.0"
description = ""
authors = ["gragragrao <mathbass.ken531@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8,<3.9"
tqdm = "^4.56.2"
torch = "1.6.0"
torchvision = "0.7.0"
pandas = "^1.2.2"
matplotlib = "^3.3.4"
scikit-learn = "^0.24.1"
ipykernel = "^5.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
